--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,18 @@
 .header__logo {
     padding-top: 45px;
-    padding-bottom: 41px;
+    padding-bottom: 37px;
+}
+
+@media (max-width: 678px){
+    .header__logo {
+        padding-top: 28px;
+        padding-bottom: 31px;
+        padding-left: 27px;
+    }
+}
+
+@media (max-width: 320px){
+    .header__logo {
+        max-width: 104px;
+    }
 }
