--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,11 @@
 .header {
-    max-width: 1280px;
     margin: 0 auto;
+    max-width: 880px;
     border-bottom: solid 1px rgba(84, 84, 84, 1);
+}
+
+@media (max-width: 800px){
+    .header {
+        max-width: 600px;
+    }
 }
