--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,29 @@
 .profile__name {
+    margin: 0;
+    max-width: 294px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
-    line-height: 48px;  
+    padding-right: 18px;
+    line-height: 48px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media (max-width: 678px){
+    .profile__name{
+        font-size: 29px;
+    }
+}
+
+@media (max-width: 440px){
+    .profile__name{
+        padding: 0;
+        font-size: 27px;
+        line-height: 33px;
+        padding-right: 10px;
+        padding-left: 28px;
+    }
 }
