--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,29 @@
 .profile {
-    max-width: 1280px;
     margin: 0 auto;
+    margin-top: 40px;
+    max-width: 880px;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 800px){
+    .profile {
+        max-width: 650px;
+    }
+}
+
+@media (max-width: 678px){
+    .profile {
+        max-width: 600px;
+        flex-direction: column;
+        margin-top: 42px;
+    }
+}
+
+@media (max-width: 678px){
+    .profile {
+        margin-top: 37px;
+    }
 }
