--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,6 +1,6 @@
 .elements__image {
     width: 100%;
-    height: 32.5vh;
+    height: 282px;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
 }
