--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,7 @@
 .popup__button {
     margin: 0;
     border: 0;
-    width: 362px;
+    width: 358px;
     height: 50px;
     background: #000000;
     border-radius: 2px;
@@ -10,14 +10,16 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    margin-top: 48px;
-    margin-left: 26px;
+    margin-top: 23px;
+    margin-left: 36px;
+    font-family: 'Inter';
 }
 
 @media (max-width:470px){
     .popup__button {
         width: 238px;
-        margin-top: 45px;
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
 
