--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,17 +1,20 @@
-.popup__name {
+.popup__input {
     font-family: 'Inter';
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     width: 358px;
-    padding-bottom: 13px;
+    padding-bottom: 9px;
     outline: none;
     border: none;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    margin-left: 36px;
+    margin-bottom: 26px;
 }
 
 @media (max-width:470px){
-    .popup__name {
+    .popup__input {
         width: 238px;
+        margin-left: 18px;
     }
 }
