--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,7 +1,7 @@
 .popup__title {
     margin: 0;
     padding-top: 34px;
-    padding-bottom: 56px;
+    padding-bottom: 47px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
@@ -16,5 +16,6 @@
         font-size: 18px;
         line-height: 22px;
         padding-bottom: 75px;
+        padding-left: 20px;
     }
 }
