--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,9 +8,9 @@
     justify-content: space-between;
 }
 
-@media (max-width: 800px){
+@media (max-width: 920px){
     .profile {
-        max-width: 650px;
+        width: 97%;
     }
 }
 
@@ -19,11 +19,5 @@
         max-width: 600px;
         flex-direction: column;
         margin-top: 42px;
-    }
-}
-
-@media (max-width: 678px){
-    .profile {
-        margin-top: 37px;
     }
 }
