--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     width: 22px;
     height: 19px;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .elements__like:hover {
