--- a/blocks/elements/__signature/elements__signature.css
+++ b/blocks/elements/__signature/elements__signature.css
@@ -6,6 +6,7 @@
     padding-left: 20px;
     padding-right: 19px;
     align-items: center;
+    padding-bottom: 7px;
 }
 
 @media (max-width: 320px){
