--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,7 +6,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     top: 0;
     left: 0;
-    display: inline-flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
