--- a/blocks/profile/__redact/profile__redact.css
+++ b/blocks/profile/__redact/profile__redact.css
@@ -1,5 +1,5 @@
 .profile__redact {
-    background-image: url(../../../../images/profile/edit.svg);
+    background-image: url(../../../images/profile/edit.svg);
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
