--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/elements/__signature/elements__signature.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
