--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
