Был сделан полный рефакторинг всего сайта

--- a/blocks/popup/__card_conteiner/popup__card_conteiner.css
+++ b/blocks/popup/__card_conteiner/popup__card_conteiner.css
@@ -1,4 +1,4 @@
-.popupduble__container {
+.popup__card_conteiner {
     width: 424px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -7,7 +7,7 @@
 }
 
 @media (max-width:470px){
-    .popupduble__container {
+    .popup__card_conteiner {
         width: 282px;
     }
 }
