--- a/blocks/elements/__delete/elements__delete.css
+++ b/blocks/elements/__delete/elements__delete.css
@@ -5,9 +5,9 @@
     width: 18px;
     height: 19px;
     background-color: rgba(255, 255, 255, 0);
-    position: relative;
-    top: -350px;
-    right: -256px;
+    position: absolute;
+    top: 12px;
+    right: 10px;
 }
     
 .elements__delete:hover {
