--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,15 +1,14 @@
 .popup {
-    visibility: hidden;
     font-family: 'Inter', 'Arial', sans-serif;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    top: 0;
-    left: 0;
-    display: none;
+    visibility: hidden;
     justify-content: center;
     align-items: center;
-    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
     transition: opacity 0.2s linear;
 }
