--- a/blocks/popup/__conteiner/popup__conteiner.css
+++ b/blocks/popup/__conteiner/popup__conteiner.css
@@ -1,4 +1,4 @@
-.popup__card_conteiner {
+.popup__conteiner {
     width: 424px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -7,7 +7,7 @@
 }
 
 @media (max-width:470px){
-    .popup__card_conteiner {
+    .popup__conteiner {
         width: 282px;
     }
 }
