--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
+@import url(../popup__form.css);
 @import url(../blocks/popup/__conteiner/popup__conteiner.css);
 @import url(../blocks/popup/__images/popup__images.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
@@ -32,3 +33,10 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__description/popup__description.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/input-account-name-error/input-account-name-error.css);
+@import url(../blocks/input-card-name-error/input-card-name-error.css);
+@import url(../blocks/input-card-url-error/input-card-url-error.css);
+@import url(../blocks/input-profile-status-error/input-profile-status-error.css);
