--- a/pages/index.css
+++ b/pages/index.css
@@ -23,7 +23,6 @@
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
-@import url(../popup__form.css);
 @import url(../blocks/popup/__conteiner/popup__conteiner.css);
 @import url(../blocks/popup/__images/popup__images.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
@@ -36,7 +35,5 @@
 @import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
-@import url(../blocks/input-account-name-error/input-account-name-error.css);
-@import url(../blocks/input-card-name-error/input-card-name-error.css);
-@import url(../blocks/input-card-url-error/input-card-url-error.css);
-@import url(../blocks/input-profile-status-error/input-profile-status-error.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/popup/__about-me/popup__about-me.css);
