--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,4 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/popup/__about-me/popup__about-me.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
